# IISNaloge

./: .gitignore  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: fetch_data.yml
gx/: .gitignore  great_expectations.yml  run_checkpoint.py  setup_ge.py
gx/checkpoints/: air_quality_checkpoint_E403.yml  air_quality_checkpoint_E404.yml  air_quality_checkpoint_E405.yml  air_quality_checkpoint_E407.yml  air_quality_checkpoint_E408.yml  air_quality_checkpoint_E409.yml  air_quality_checkpoint_E410.yml  air_quality_checkpoint_E411.yml  air_quality_checkpoint_E412.yml  air_quality_checkpoint_E413.yml  air_quality_checkpoint_E414.yml  air_quality_checkpoint_E415.yml  air_quality_checkpoint_E417.yml  air_quality_checkpoint_E418.yml  air_quality_checkpoint_E419.yml  air_quality_checkpoint_E420.yml  air_quality_checkpoint_E421.yml  air_quality_checkpoint_E423.yml  air_quality_checkpoint_E424.yml  air_quality_checkpoint_E801.yml  (+3 more)
reports/: data_testing_report_E403.html  data_testing_report_E404.html  data_testing_report_E405.html  data_testing_report_E407.html  data_testing_report_E408.html  data_testing_report_E409.html  data_testing_report_E410.html  data_testing_report_E411.html  data_testing_report_E412.html  data_testing_report_E413.html  data_testing_report_E414.html  data_testing_report_E415.html  data_testing_report_E417.html  data_testing_report_E418.html  data_testing_report_E420.html  data_testing_report_E421.html  data_testing_report_E423.html  data_testing_report_E801.html  data_testing_report_E802.html  data_testing_report_E803.html  data_testing_report_E804.html  index.html
(+58 files in other folders)
