[project]
name = "projektiis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyaml>=26.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]
