[project]
name = "projektiis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "lxml>=5.3.1,<6.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyaml>=25.1.0,<26.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.3,<3.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "great-expectations==0.18.21",
    "dvc>=3.67.1",
]

