[project]
name = "projektiis"
version = "0.1.0"
description = "MLOps projekt za predmet IIS"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "lxml>=5.3.1,<6.0.0",
    "pyaml>=25.1.0,<26.0.0",
    "pyyaml>=6.0.3",
    "great-expectations==0.18.21",
    "evidently>=0.7.1,<0.8.0",
    "tensorflow>=2.16.0,<2.17.0; sys_platform == 'linux'",
    "tensorflow-macos>=2.16.0,<2.17.0; sys_platform == 'darwin'",
    "tensorflow-metal>=1.1.0; sys_platform == 'darwin'",
    "joblib>=1.3.0",
    "dvc>=3.0.0",
    "dvc-s3>=3.3.0",
    "mlflow>=2.22.0,<3.0.0",
    "onnx>=1.16.0,<1.17.0",
    "tf2onnx>=1.16.0",
]


